converted to React application and shifted basic components: Header, Zipcode Input, Footer

--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
-geocodeApiKey = AIzaSyCaEJWz2Tr0vukbMCAxqPj9HxuNe22tCyg
+## MovieGlu API 
+REACT_APP_CLIENT_NAME = 'VKQM'
+REACT_APP_X_API_KEY = '	Tfv2A1cyAua7Yx2Z0R3iv5l8BJmtz0wR2CF71UPh'
+REACT_APP_API_VERSION = 'v200'
+REACT_APP_TERRITORY = 'XX'
+# Basic Authorization
+REACT_APP_API_KEY = 'VktRTV9YWDpicUlRTXdoRzREY3Q='
+
+
+#Google Maps API
+REACT_APP_GOOGLE_MAPS_API_KEY = 'AIzaSyCaEJWz2Tr0vukbMCAxqPj9HxuNe22tCyg'
